--- a/config/routes/framework.yaml
+++ b/config/routes/framework.yaml
@@ -2,3 +2,9 @@ when@dev:
     _errors:
         resource: '@FrameworkBundle/Resources/config/routing/errors.xml'
         prefix: /_error
+contact:
+    path: /contact
+    controller: App\Controller\ContactController::contactForm
+success:
+    path: /success/{name}
+    controller: App\Controller\ContactController::success
